All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/SM_Device_Mobile_Config__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object stores mobile configuration tagged for mobile device specific.</description>
    <label>Device Mobile Config</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Mobile Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>