All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/fields/SM_Access_Configuration_Profile__c.field-meta.xml
<CustomField>
    <fullName>SM_Access_Configuration_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field stores servicemax profile tagged to device mobile configuration</description>
    <label>Access Configuration Profile</label>
    <referenceTo>ServiceMax_Config_Data__c</referenceTo>
    <relationshipLabel>Device Mobile Config</relationshipLabel>
    <relationshipName>Device_Mobile_Config</relationshipName>
    <type>Lookup</type>
</CustomField>