All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/fields/SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Description__c</fullName>
    <description>Field stores description about device mobile configuration</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>