All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/fields/SM_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Device_Type__c</fullName>
    <label>Device Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Android Tablet</fullName>
            </value>
            <value>
                <fullName>Android Phone</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>