All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/fields/SM_IsDefault__c.field-meta.xml
<CustomField>
    <fullName>SM_IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field stores whether device mobile configuration is default or not.</description>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>