All_Component_DX/force-app/main/default/objects/SM_Device_Mobile_Config__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <description>Field stores the device mobile configuration title.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>